--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ img[alt="menu"] {
         top: 68px;
         right: 20px;
         background-color: white;
-        padding: 40px;
+        padding: 65px;
         text-align: center;
         border: 1px solid black;
         border-radius: 10px;
@@ -77,7 +77,7 @@ img[alt="menu"] {
         top: 68px;
         right: 20px;
         background-color: white;
-        padding: 40px;
+        padding: 65px;
         text-align: center;
         border: 1px solid black;
         border-radius: 10px;
@@ -602,6 +602,7 @@ img[alt="training"] {
     background-color: rgb(133, 133, 133);
     padding: 70px;
     color: white;
+    font-size: 18px;
 }
 
 .card>ul {
@@ -652,7 +653,7 @@ button[name="join-club"] {
     .card {
         width: 45%;
         padding: 70px;
-
+        font-size: 20px;
     }
 
     .card>p {
@@ -668,6 +669,7 @@ button[name="join-club"] {
     .card {
         width: 44%;
         padding: 75px;
+        font-size: 21px;
     }
 
     .card>p {
@@ -684,7 +686,7 @@ button[name="join-club"] {
     .card {
         width: 100%;
         padding: 75px;
-
+        font-size: 21px;
     }
 
     .card>p {
